# PetSitters

./: .dockerignore  .env  .gitignore  Clients.db  Makefile  README.md  alembic.ini  config.py  database.db  docker-compose.yml  pyproject.toml  run.py  tasks.db
PetSitters_backend/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  run.py
PetSitters_front/: Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  webpack.config.js
PetSitters_front/app/: index.jsx
PetSitters_front/app/components/: 000_backend_key.jsx  00_1_main_header.jsx  01_client_form.jsx  01_client_form_sitters_page.jsx  01_clinet_form_connectsServer.jsx  01_form_shared_userRequest.jsx  01_modal.jsx  02_input.jsx  03_button_all.jsx  04_main_div3.jsx  05_react_date_picker.jsx  06_main_div2.jsx  07_main_div1.jsx  08_main_div4.jsx  09_main_div5.jsx  10_main_div6.jsx  10_request&receiveSitters.jsx  11_footer.jsx  12_sitter_data.jsx  12_sitter_data_ability_icons.jsx  12_sitter_data_fullProfile.jsx  13_sitters_page_div1.jsx  14_sitters_page_div2.jsx  15_sitters_page_div3.jsx  client_form.jsx  experiment.jsx  header.jsx
PetSitters_front/app/pages/: home.js  (+2 more)
PetSitters_front/public/: bundle.js
app/: Clients.db
backend/: .env  .gitignore  Dockerfile  run.py
docker_compose/: app.yml
migrations/: env.py
migrations/versions/: 5652c869bb41_databasecreation.py  61fad613edf5_новая_ревизия.py
src/: app_setings.py  app_settings.py  config.py  main.py  run.py
src/auth/: auth.py  database.py  manager.py
src/models/: models.py
src/schemas/: client.py
(+95 files in other folders)
