[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Hakaton Project"
authors = ["4got10king <Aldavletshina77654@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
fastapi-users = "^13.0.0"
ipython = "^8.24.0"
pytest = "^8.2.1"
faker = "^25.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
